<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.melvincheng.lab8.ShowLocation">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/addressLine1_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addressLine1_lbl"/>
    <EditText
        android:id="@+id/addressLine1_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressLine1_lbl"
        android:editable="false"/>
    <TextView
        android:id="@+id/addressLine2_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressLine1_edit"
        android:text="@string/addressLine2_lbl"/>
    <EditText
        android:id="@+id/addressLine2_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressLine2_lbl"
        android:editable="false"/>
    <TextView
        android:id="@+id/locality_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressLine2_edit"
        android:text="@string/locality_lbl"/>
    <EditText
        android:id="@+id/locality_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locality_lbl"
        android:editable="false"/>
    <TextView
        android:id="@+id/adminArea_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/locality_edit"
        android:text="@string/adminArea_lbl"/>
    <EditText
        android:id="@+id/adminArea_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adminArea_lbl"
        android:editable="false"/>
    <TextView
        android:id="@+id/country_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adminArea_edit"
        android:text="@string/country_lbl"/>
    <EditText
        android:id="@+id/country_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_lbl"
        android:editable="false"/>
    <TextView
        android:id="@+id/postalCode_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_edit"
        android:text="@string/postalCode_lbl"/>
    <EditText
        android:id="@+id/postalCode_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postalCode_lbl"
        android:editable="false"/>
    <TextView
        android:id="@+id/phone_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/postalCode_edit"
        android:text="@string/phone_lbl"/>
    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_lbl"
        android:editable="false"/>
    <TextView
        android:id="@+id/url_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_edit"
        android:text="@string/url_lbl"/>
    <EditText
        android:id="@+id/url_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_lbl"
        android:editable="false"/>

    </RelativeLayout>
</ScrollView>
